Fix horizontal scroll

--- a/assets/themes/default/_header.scss
+++ b/assets/themes/default/_header.scss
@@ -37,6 +37,10 @@ body > header {
     flex-direction: row;
     align-items: center;
 
+    &.right-nav {
+      overflow-x: hidden;
+    }
+
     hr {
       height: 100%;
       width: 0.2em;
